--- a/klambi.html
+++ b/klambi.html
@@ -153,7 +153,7 @@
 <section class="about-section" id="tentang">
     <div class="container about-flex">
         <div class="about-image">
-            <img src="https://images.unsplash.com/photo-1487412720507-e7ab37603c6f?w=500" alt="Sulistiowati">
+            <img src="https://github.com/Sulmad/Klambi/blob/2e3d19f4c5676af7ea8194764d36c2db25d10c06/IMG20250215082921.jpg" alt="Sulistiowati">
         </div>
         <div class="about-text">
             <h2>Tentang Sulistiowati</h2>
