--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         const db_produk = [
             { id: 1, nama: "Gamis Silk Aaliyah", harga: 345000, img: "https://images.unsplash.com/photo-1567401893414-76b7b1e5a7a5?w=500", desc: "Gamis berbahan silk premium yang sangat jatuh dan adem. Mewah untuk acara formal." },
             { id: 2, nama: "Blouse Kirana", harga: 175000, img: "https://images.unsplash.com/photo-1585487000160-6ebcfceb0d03?w=500", desc: "Blouse trendy dengan motif floral lembut. Nyaman untuk dipakai seharian." },
-            { id: 3, nama: "Hijab Pashmina", harga: 55000, img: "https://images.unsplash.com/photo-1609171712499-07f910f54546?w=500", desc: "Pashmina mudah dibentuk dan tegak di dahi. Tersedia berbagai warna pastel." },
+            { id: 3, nama: "Hijab Pashmina", harga: 55000, img: "https://raw.githubusercontent.com/Sulmad/Klambi/refs/heads/main/Long-SleeveShirt.png", desc: "Pashmina mudah dibentuk dan tegak di dahi. Tersedia berbagai warna pastel." },
             { id: 4, nama: "Outer Lace Syifa", harga: 285000, img: "https://images.unsplash.com/photo-1515372039744-b8f02a3ae446?w=500", desc: "Outer berbahan lace eksklusif yang memberikan kesan anggun seketika." }
         ];
 
