--- a/Aboutme.html
+++ b/Aboutme.html
@@ -200,7 +200,7 @@
                     </div>
                 </a>
 
-                <a href="https://instagram.com/klamby_by_sulistiowati" target="_blank" class="contact-item btn-ig">
+                <a href="https://instagram.com/sulistiowati.lm" target="_blank" class="contact-item btn-ig">
                     <span class="icon">📸</span>
                     <div class="text">
                         <span>Instagram</span>
