--- a/Aboutme.html
+++ b/Aboutme.html
@@ -192,11 +192,11 @@
             <p>Punya pertanyaan mengenai koleksi kami atau ingin melakukan pemesanan khusus?</p>
             
             <div class="contact-links">
-                <a href="https://wa.me/6281234567890" target="_blank" class="contact-item btn-wa">
+                <a href="https://wa.me/62895340194398" target="_blank" class="contact-item btn-wa">
                     <span class="icon">📱</span>
                     <div class="text">
                         <span>WhatsApp Resmi</span>
-                        <strong>+62 812 3456 7890</strong>
+                        <strong>0895340194398</strong>
                     </div>
                 </a>
 
