--- a/Aboutme.html
+++ b/Aboutme.html
@@ -167,7 +167,7 @@
   <section class="about-section" id="tentang-saya">
     <div class="container about-container">
         <div class="about-image">
-            <img src="img/sulistiowati.jpg" alt="Sulistiowati">
+            <img src="https://raw.githubusercontent.com/Sulmad/Klambi/refs/heads/main/sulistiowati.jpg" alt="Sulistiowati">
         </div>
         <div class="about-text">
             <span class="sub-title">Dibalik Layar</span>
